gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/deprecatedImporta.d
version https://git-lfs.github.com/spec/v1
oid sha256:a6ecc9018930802cefe5c81959b51c638320e45f881f2898bfa13a73eef4e4f1
size 130
